# ai-project-base-template

./: README.md  pyproject.toml
